# aaa

./: README
address_book/: .contact_details.hh.swp  address_book.cc  address_book.hh  contact_details.cc  contact_details.hh  main  main.cc
antagonist/: CMakeLists.txt
antagonist/libbeaver/: CMakeLists.txt
antagonist/libbeaver/src/: beaver.cc  beaver_impl.cc  beaver_impl.hh
bimap/: bimap  bimap.hxx  bimap_example.cc
builder/: builder  builder.cc
cartesian_vector/: format_numerical_data.cc  format_numerical_data.hh  state_saver.cc  vector.cc  vector.hh  vector_test  vector_test.cc
chain_of_responsibility/tests/: chain_of_responsibility.cc
closer_to/: closer_to.cc  closer_to.out
exception/: CMakeLists.txt  game.cc  main.cc  player.cc  player.hh
exist_functor/: example.cc  exist.hh  exist.hxx  test
forward_multiplication/: forward_multiplication.cc
huffman/: a.out  encode_decode.cc  encode_decode.hh  huffman.cc  huffman.hh  main.cc  node.cc  node.hh  priority_queue.cc  priority_queue.hh
is_prime/: is_prime.hxx  test
libzork/: CMakeLists.txt
libzork/libzork/: CMakeLists.txt
libzork/libzork/src/runner/: choice.cc  choice_impl.cc  choice_impl.hh  interactive.cc  runner.cc  smart.cc  smart_impl.cc  smart_impl.hh
libzork/libzork/src/store/: store.cc  store_impl.cc  store_impl.hh
libzork/libzork/src/story/: choice.hh  node.cc  node_impl.cc  node_impl.hh  story.cc  story_impl.cc  story_impl.hh
libzork/libzork/src/vars/: action.cc  action_impl.cc  action_impl.hh  condition.cc  condition_impl.cc  condition_impl.hh
libzork/src/: main.cc
libzork/tests/stories/dynamic/: synonyms.yml
lookup_table/: a.out  lookup_table.cc  lookup_table_test.cc
merge_sort/: merge_sort.cc
my_nfts/: auction.cc  main.cc  nft.hxx  person.cc
path/: .unix_path.hh.swp  CMakeLists.txt  path.cc  path_example.cc  unix_path.cc  unix_path.hh  windows_path.cc  windows_path.hh
singleton/: singleton  singleton.cc  singleton.hh  singleton.hxx
smtptr/: main.cc  shared_pointer.hh  shared_pointer.hxx  shared_pointer_is_a.cc
vector_implements/: main.cc  myvec  point.cc  point.hh  vector.hh  vector.hxx
